[package]
name = "serde_json"
version = "1.0.92" # remember to update html_root_url
edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0.100", default-features = false }
indexmap = { version = "1.5.2", features = ["std"], optional = true }
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
automod = "1.0"
indoc = "2.0"
ref-cast = "1.0"
rustversion = "1.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_stacker = "0.1"
trybuild = { version = "1.0.49", features = ["diff"] }

[workspace]
members = ["tests/crate"]

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
features = ["raw_value", "unbounded_depth"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["raw_value"]


### FEATURES #################################################################

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]
preserve_order = ["indexmap", "std"]
float_roundtrip = []
arbitrary_precision = []
raw_value = []
unbounded_depth = []
